--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ICONIC DETAILS - Mobile Car Detailing</title>
+    <title>ICONIC MOBILE DETAILS - Mobile Car Detailing</title>
     <style>
         body {
             font-family: 'Avenir Next LT Pro', Arial, sans-serif;
@@ -57,14 +57,14 @@
             font-size: 2rem;
             color: #fff;
         }
+        section ul {
+            margin-bottom: 2rem;
+        }
         footer {
             text-align: center;
             padding: 1rem;
             background-color: #000;
             color: #fff;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
         }
     </style>
     <script>
@@ -135,15 +135,15 @@
     </section>
     <section id="reviews">
         <h3>Reviews</h3>
-        <p>At ICONIC DETAILS, we believe that reviews are the cornerstone of any successful business. They provide us with invaluable feedback and help future customers make informed decisions. Your opinion matters, and we strive to earn 5-star reviews from every customer we serve.</p>
+        <p>At ICONIC MOBILE DETAILS, we believe that reviews are the cornerstone of any successful business. They provide us with invaluable feedback and help future customers make informed decisions. Your opinion matters, and we strive to earn 5-star reviews from every customer we serve.</p>
     </section>
     <section id="legal">
         <h3>Legal</h3>
-        <p>By scheduling a service with ICONIC DETAILS, you acknowledge and accept that all services are provided "as is." While we take the utmost care, ICONIC DETAILS is not liable for any damage to vehicles during or after the service. The customer assumes all risks associated with the detailing process.</p>
+        <p>By scheduling a service with ICONIC MOBILE DETAILS, you acknowledge and accept that all services are provided "as is." While we take the utmost care, ICONIC DETAILS is not liable for any damage to vehicles during or after the service. The customer assumes all risks associated with the detailing process.</p>
         <p>Payment Policy: 50% upfront, 50% upon completion. If the vehicle's condition requires additional time beyond the estimated duration, an extra charge of $25 per 30 minutes will be applied. Veterans receive a 10% discount.</p>
     </section>
     <footer>
-        <p>&copy; 2025 ICONIC DETAILS. All Rights Reserved.</p>
+        <p>&copy; 2025 ICONIC MOBILE DETAILS. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
