--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
     </section>
     <section id="expectations">
         <h3>What to Expect</h3>
-        <p>I will require access to your water supply to perform the detailing services. However, I will provide my own power source to ensure that all tools and equipment operate efficiently.</p>
+        <p> I will arrive at mutal agrred on location with all tools necessary to complete the job. I will require access to your water supply to perform the detailing services. Around 10 gallons of water will be used to complete the job this will result in around $0.03 of water usage. However, I will provide my own power source to ensure that all tools and equipment operate efficiently.</p>
     </section>
     <section id="reviews">
         <h3>Reviews</h3>
-        <p>At ICONIC MOBILE DETAILS, we believe that reviews are the cornerstone of any successful business. They provide us with invaluable feedback and help future customers make informed decisions. Your opinion matters, and we strive to earn 5-star reviews from every customer we serve. If you are not satisfied with your service, let us know! We want to continously improve the work we do to better serve the needs of the people of Kentucky. </p>
+        <p>At ICONIC MOBILE DETAILS, we believe that reviews are the cornerstone of any successful business. They provide us with invaluable feedback and help future customers make informed decisions. Your opinion matters, and we strive to earn 5-star reviews from every customer we serve. If you are not satisfied with your service, let us know! We want to continously improve the work we do to better serve Kentucky. </p>
     </section>
     <section id="legal">
         <h3>Legal</h3>
