--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </section>
     <section id="expectations">
         <h3>What to Expect</h3>
-        <p> I will arrive at mutal agrred on location with all tools necessary to complete the job. I will require access to your water supply to perform the detailing services. Around 10 gallons of water will be used to complete the job this will result in around $0.03 of water usage. However, I will provide my own power source to ensure that all tools and equipment operate efficiently.</p>
+        <p> I will arrive at mutal agreed on location with all tools necessary to complete the job. I will require access to your water supply to perform the detailing services. Around 10 gallons of water will be used to complete the job this will result in around $0.03 of water usage. However, I will provide my own power source to ensure that all tools and equipment operate efficiently.</p>
     </section>
     <section id="reviews">
         <h3>Reviews</h3>
