--- a/index.html
+++ b/index.html
@@ -66,9 +66,6 @@
             font-size: 2rem;
             color: #fff;
         }
-        section ul {
-            margin-bottom: 2rem;
-        }
         .button {
             display: inline-block;
             background-color: #ffcc00;
@@ -82,33 +79,31 @@
         .button:hover {
             background-color: #ffa500;
         }
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1rem;
-        }
-        .gallery img {
-            width: 100%;
-            border-radius: 8px;
-            border: 2px solid #fff;
-        }
         footer {
             text-align: center;
             padding: 1rem;
             background-color: #000;
             color: #fff;
         }
-        @media (max-width: 768px) {
-            nav a {
-                margin: 0 0.5rem;
-                font-size: 1rem;
-            }
-            section {
-                padding: 1.5rem;
-            }
-            header img {
-                width: 250px;
-            }
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+        form input, form select, form button {
+            padding: 0.8rem;
+            font-size: 1rem;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        form button {
+            background-color: #ffcc00;
+            color: #000;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        form button:hover {
+            background-color: #ffa500;
         }
     </style>
     <script>
@@ -132,7 +127,6 @@
                 });
             });
 
-            // Show the first section by default
             if (sections.length > 0) {
                 sections[0].classList.add('active');
             }
@@ -148,54 +142,49 @@
         <a href="#about">About</a>
         <a href="#expectations">What to Expect</a>
         <a href="#reviews">Reviews</a>
+        <a href="#booking">Booking</a>
         <a href="#legal">Legal</a>
     </nav>
     <section class="hero" id="services">
         <h3>Our Services</h3>
-        <ul>
-            <li>
-                <strong>Entry Wash - $100:</strong>
-                <p>Perfect for those seeking a quick yet professional clean. Includes exterior wash, tire shine, and basic interior vacuum. <em>Estimated Time: 2 Hours.</em></p>
-            </li>
-            <li>
-                <strong>Medium Wash - $200:</strong>
-                <p>Enjoy a more comprehensive clean with Entry Wash services plus interior shampoo and dashboard detailing. <em>Estimated Time: 4 Hours.</em></p>
-            </li>
-            <li>
-                <strong>Advanced Wash - $400:</strong>
-                <p>Experience premium detailing with Medium Wash services plus clay bar treatment and paint sealant for long-lasting shine. <em>Estimated Time: 6 Hours.</em></p>
-            </li>
-            <li>
-                <strong>Showroom Wash - $1000:</strong>
-                <p>The ultimate detailing package. Includes Advanced Wash services plus ceramic coating and engine bay cleaning. Your car will look like it just rolled off the showroom floor. <em>Estimated Time: 8 Hours.</em></p>
-            </li>
-        </ul>
         <p><strong>Veterans, First Responders, and Students Discount:</strong> All mentioned receive an instant 10% off their entire bill.</p>
-        <a href="#" class="button">Get a Free Quote</a>
+        <a href="#booking" class="button">Schedule Your Cleaning Now</a>
     </section>
-    <section id="about">
-        <h3>About Us</h3>
-        <p>I am an engineering graduate from the University of Kentucky who has always had an affinity for cars, particularly an obsession with how clean people could get their cars. I could not wait until the day I was 16 to get my first car and keep it clean. My hobby grew into a passion. Over the next 10 years, I researched the best products, practices, and techniques to preserve paint and restore the factory shine. My engineering background plays a role as well, studying the reactions and complements of different products and benchmarking their success to provide you, the customer, with the best all-around detailing process in Kentucky.</p>
-    </section>
-    <section id="expectations">
-        <h3>What to Expect</h3>
-        <p> I will arrive at mutal agreed on location with all tools necessary to complete the job. I will require access to your water supply to perform the detailing services. Around 10 gallons of water will be used to complete the job this will result in around $0.03 of water usage. However, I will provide my own power source to ensure that all tools and equipment operate efficiently.</p>
-    </section>
-    <section id="reviews">
-        <h3>Reviews</h3>
-        <p>At ICONIC MOBILE DETAILS, we believe that reviews are the cornerstone of any successful business. They provide us with invaluable feedback and help future customers make informed decisions. Your opinion matters, and we strive to earn 5-star reviews from every customer we serve. If you are not satisfied with your service, let us know! We want to continously improve the work we do to better serve Kentucky. </p>
+    <section id="booking">
+        <h3>Book an Appointment</h3>
+        <form id="bookingForm">
+            <input type="text" id="name" name="name" placeholder="Full Name" required>
+            <input type="tel" id="phone" name="phone" placeholder="Phone Number" required>
+            <input type="email" id="email" name="email" placeholder="Email Address" required>
+            <select id="service" name="service" required>
+                <option value="">Select a Service</option>
+                <option value="entry_wash">Entry Wash - $100</option>
+                <option value="medium_wash">Medium Wash - $200</option>
+                <option value="advanced_wash">Advanced Wash - $400</option>
+                <option value="showroom_wash">Showroom Wash - $1000</option>
+            </select>
+            <select id="dirt_level" name="dirt_level" required>
+                <option value="">How Dirty is Your Car?</option>
+                <option value="light">Light - Just Dust</option>
+                <option value="moderate">Moderate - Some Stains/Grime</option>
+                <option value="heavy">Heavy - Deep Stains, Pet Hair, Mud</option>
+            </select>
+            <input type="text" id="car_details" name="car_details" placeholder="Car Make, Model, Year, Color" required>
+            <input type="date" id="date" name="date" required>
+            <input type="time" id="time" name="time" required>
+            <label><input type="checkbox" id="home_required" name="home_required"> I do not need to be home, but keys will be accessible</label>
+            <button type="submit">Submit Booking Request</button>
+        </form>
     </section>
     <section id="legal">
         <h3>Legal</h3>
-        <p>By scheduling a service with ICONIC MOBILE DETAILS, you acknowledge and accept that all services are provided "as is." While we take the utmost care, ICONIC MOBILE DETAILS is not liable for any damage to vehicles during or after the service. The customer assumes all risks associated with the detailing process.</p>
-        <p>Payment Policy: 50% upfront, 50% upon completion. If the vehicle's condition requires additional time beyond the estimated duration, an extra charge of $25 per 30 minutes will be applied. Veterans, First Responders, and Students will receive a 10% discount off entire bill.</p>
+        <p>By scheduling a service with ICONIC MOBILE DETAILS, you acknowledge and accept that all services are provided "as is." ICONIC MOBILE DETAILS is not liable for any damage to vehicles during or after the service.</p>
+        <p>Payment Policy: 50% upfront, 50% upon completion. If extra time is required due to vehicle condition, an additional charge of $25 per 30 minutes will apply.</p>
+        <p>Photos will be taken for service completion proof, excluding license plate details.</p>
+        <p>We reserve the right to refuse service for high-risk or mechanically compromised vehicles.</p>
     </section>
     <footer>
         <p>&copy; 2025 ICONIC MOBILE DETAILS. All Rights Reserved.</p>
-        <p>Follow us: 
-            <a href="https://facebook.com" target="_blank">Facebook</a> | 
-            <a href="https://instagram.com" target="_blank">Instagram</a>
-        </p>
         <p>Contact: (000) 000-0000 | email@example.com</p>
     </footer>
 </body>
