--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </li>
         </ul>
         <p><strong>Veterans, First Responders, and Students Discount:</strong> All mentioned receive an instant 10% off their entire bill.</p>
-        <a href="#" class="button">Get a Free Quote</a>
+        <a href="#" class="button">CLICK HERE TO BOOK</a>
     </section>
     <section id="about">
         <h3>About Us</h3>
@@ -188,7 +188,7 @@
     <section id="legal">
         <h3>Legal</h3>
         <p>By scheduling a service with ICONIC MOBILE DETAILS, you acknowledge and accept that all services are provided "as is." While we take the utmost care, ICONIC MOBILE DETAILS is not liable for any damage to vehicles during or after the service. The customer assumes all risks associated with the detailing process.</p>
-        <p>Payment Policy: 50% upfront, 50% upon completion. If the vehicle's condition requires additional time beyond the estimated duration, an extra charge of $25 per 30 minutes will be applied. Veterans, First Responders, and Students will receive a 10% discount off entire bill.</p>
+        <p>Payment Policy: 50% upfront, 50% upon completion. If the vehicle's condition requires additional time beyond the estimated duration, an extra charge of $25 per 30 minutes will be applied. Veterans, First Responders, and Students will receive a 10% discount off entire bill. If the service is canceled within 48 hours of the appointment, the 50% upfront charge will not be refunded however, no additional charges will be applied. Canceling booking outside of the 48 hour window will result in a full refund. </p>
     </section>
     <footer>
         <p>&copy; 2025 ICONIC MOBILE DETAILS. All Rights Reserved.</p>
